--- a/index.ipynb
+++ b/index.ipynb
@@ -32,9 +32,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "696d80e2-5ff3-11e9-aa2f-592f23582a29",
+         "x": [
+          70,
+          80,
+          90,
+          100,
+          110,
+          120,
+          130,
+          140
+         ],
+         "y": [
+          10852,
+          9690,
+          9128,
+          9166,
+          9804,
+          11042,
+          12880,
+          15318
+         ]
+        }
+       ],
+       "layout": {
+        "title": "RSS with changes to y-intercept",
+        "xaxis": {
+         "title": "y-intercept value"
+        },
+        "yaxis": {
+         "title": "RSS"
+        }
+       }
+      },
+      "text/html": [
+       "<div id=\"caac31e0-93ba-47aa-ac79-7916573365bc\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"caac31e0-93ba-47aa-ac79-7916573365bc\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90, 100, 110, 120, 130, 140], \"y\": [10852, 9690, 9128, 9166, 9804, 11042, 12880, 15318], \"type\": \"scatter\", \"uid\": \"6991e1ee-5ff3-11e9-aa2f-592f23582a29\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"caac31e0-93ba-47aa-ac79-7916573365bc\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"caac31e0-93ba-47aa-ac79-7916573365bc\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90, 100, 110, 120, 130, 140], \"y\": [10852, 9690, 9128, 9166, 9804, 11042, 12880, 15318], \"type\": \"scatter\", \"uid\": \"6991e1ee-5ff3-11e9-aa2f-592f23582a29\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly\n",
     "from plotly.offline import init_notebook_mode, iplot\n",
@@ -187,9 +264,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "17d38e42-5ff4-11e9-aa2f-592f23582a29",
+         "x": [
+          70,
+          80,
+          90
+         ],
+         "y": [
+          10852,
+          9690,
+          9128
+         ]
+        }
+       ],
+       "layout": {
+        "title": "RSS with changes to y-intercept",
+        "xaxis": {
+         "title": "y-intercept value"
+        },
+        "yaxis": {
+         "title": "RSS"
+        }
+       }
+      },
+      "text/html": [
+       "<div id=\"c494363f-4a67-452e-86ae-13c890a960a6\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c494363f-4a67-452e-86ae-13c890a960a6\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90], \"y\": [10852, 9690, 9128], \"type\": \"scatter\", \"uid\": \"17df3224-5ff4-11e9-aa2f-592f23582a29\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"c494363f-4a67-452e-86ae-13c890a960a6\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c494363f-4a67-452e-86ae-13c890a960a6\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90], \"y\": [10852, 9690, 9128], \"type\": \"scatter\", \"uid\": \"17df3224-5ff4-11e9-aa2f-592f23582a29\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly\n",
     "from plotly.offline import init_notebook_mode, iplot\n",
@@ -289,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
